Added tests and readme